--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -956,6 +956,9 @@ Engine:
       --engine.account-worker-count <ACCOUNT_WORKER_COUNT>
           Configure the number of account proof workers in the Tokio blocking pool. If not specified, defaults to the same count as storage workers
 
+      --engine.enable-proof-v2
+          Enable V2 storage proofs for state root calculations
+
 ERA:
       --era.enable
           Enable import from ERA1 files
