refactor: Consolidate transaction batching configuration into a single `BatchConfig` struct.

--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -679,7 +679,7 @@ TxPool:
           [default: 1]
 
       --txpool.batch-timeout <DURATION>
-          Batch timeout for transaction pool insertions (e.g. "50ms" or "0" for immediate). When non-zero, transactions are batched until either max-batch-size is reached OR timeout expires. Use "0" for immediate processing (zero-cost path, original behavior)
+          Batch timeout for transaction pool insertions (e.g. "50ms" or "0" for immediate). When non-zero, transactions are batched until either max-batch-size is reached OR timeout expires. Use "0" for immediate processing
 
           [default: 0]
 
