--- a/docs/vocs/docs/pages/cli/reth.mdx
+++ b/docs/vocs/docs/pages/cli/reth.mdx
@@ -23,6 +23,7 @@ Commands:
   config        Write config to stdout
   prune         Prune according to the configuration without any limits
   re-execute    Re-execute blocks in parallel to verify historical sync correctness
+  report        Generate a debug report archive for bug reports
   help          Print this message or the help of the given subcommand(s)
 
 Options:
