--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -74,6 +74,9 @@ Datadir:
       --datadir.rocksdb <PATH>
           The absolute path to store `RocksDB` database in.
 
+      --datadir.pprof-dumps <PATH>
+          The absolute path to store pprof dumps in.
+
 Networking:
   -d, --disable-discovery
           Disable the discovery service
