--- a/docs/vocs/docs/pages/cli/reth/init-state.mdx
+++ b/docs/vocs/docs/pages/cli/reth/init-state.mdx
@@ -30,6 +30,9 @@ Datadir:
       --datadir.rocksdb <PATH>
           The absolute path to store `RocksDB` database in.
 
+      --datadir.pprof-dumps <PATH>
+          The absolute path to store pprof dumps in.
+
       --config <FILE>
           The path to the configuration file to use
 
