docs: document account_change_sets static files config

--- a/docs/vocs/docs/pages/run/configuration.mdx
+++ b/docs/vocs/docs/pages/run/configuration.mdx
@@ -466,6 +466,7 @@ headers = 8192
 transactions = 8192
 receipts = 8192
 transaction_senders = 8192
+account_change_sets = 8192
 ```
 
 [TOML]: https://toml.io/
