--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -827,7 +827,7 @@ Pruning:
       --minimal
           Run minimal storage mode with maximum pruning and smaller static files.
 
-          This mode configures the node to use minimal disk space by: - Fully pruning sender recovery, transaction lookup, receipts, and block bodies - Leaving 10,064 blocks for account and storage history - Using 10,000 blocks per static file segment
+          This mode configures the node to use minimal disk space by: - Fully pruning sender recovery, transaction lookup, receipts - Leaving 10,064 blocks for account, storage history and block bodies - Using 10,000 blocks per static file segment
 
       --prune.block-interval <BLOCK_INTERVAL>
           Minimum pruning interval measured in blocks
